services/bitwarden/bitwarden-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: bitwarden
  name: bitwarden
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: bitwarden-service
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.network/default: "true"
        io.kompose.network/public: "true"
        io.kompose.service: admin
    spec:
      containers:
        - image: bitwarden/admin:latest
          name: bitwarden-admin
          volumeMounts:
            - name: bitwarden-data-pvc
              mountPath: /etc/bitwarden
              subPath: core
            - name: bitwarden-data-pvc
              mountPath: /etc/bitwarden
              subPath: ca-certificates
            - name: bitwarden-data-pvc
              mountPath: /etc/bitwarden/
              subPath: logs
        - image: bitwarden/api:latest
          name: bitwarden-api
          volumeMounts:
            - mountPath: /etc/bitwarden
              name: bitwarden-data-pvc
              subPath: core
            - mountPath: /etc/bitwarden
              name: bitwarden-data-pvc
              subPath: ca-certificates
            - mountPath: /etc/bitwarden
              name: bitwarden-data-pvc
              subPath: logs
        - image: bitwarden/attachments:latest
          name: bitwarden-attachments
          volumeMounts:
            - mountPath: /etc/bitwarden
              name: bitwarden-data-pvc
              subPath: core/attachments
        - image: bitwarden/events:latest
          name: bitwarden-events
          volumeMounts:
            - mountPath: /etc/bitwarden
              name: bitwarden-data-pvc
              subPath: ca-certificates
            - mountPath: /etc/bitwarden
              name: bitwarden-data-pvc
              subPath: logs
        - image: bitwarden/icons:latest
          name: bitwarden-icons
          volumeMounts:
            - mountPath: /etc/bitwarden
              name: bitwarden-data-pvc
              subPath: ca-certificates
            - mountPath: /etc/bitwarden
              name: bitwarden-data-pvc
              subPath: logs
        - image: bitwarden/identity:latest
          name: bitwarden-identity
          resources: {}
          volumeMounts:
            - mountPath: /etc/bitwarden
              name: bitwarden-data-pvc
              subPath: identity
            - mountPath: /etc/bitwarden
              name: bitwarden-data-pvc
              subPath: core
            - mountPath: /etc/bitwarden
              name: bitwarden-data-pvc
              subPath: ca-certificates
            - mountPath: /etc/bitwarden
              name: bitwarden-data-pvc
              subPath: logs
        - image: bitwarden/mssql:latest
          name: bitwarden-mssql
          volumeMounts:
            - mountPath: /var/opt/mssql
              name: bitwarden-mssql-data-pvc
              subPath: data
            - mountPath: /var/opt/mssql
              name: bitwarden-mssql-data-pvc
              subPath: log
            - mountPath: /etc/bitwarden
              name: bitwarden-data-pvc
              subPath: mssql/backups
        - image: bitwarden/nginx:latest
          name: bitwarden-nginx
          ports:
            - containerPort: 8080
            - containerPort: 8443
          volumeMounts:
            - mountPath: /etc/bitwarden
              name: bitwarden-data-pvc
              subPath: nginx
            - mountPath: /etc
              name: bitwarden-data-pvc
              subPath: letsencrypt
            - mountPath: /etc
              name: bitwarden-data-pvc
              subPath: ssl
            - mountPath: /var/log/nginx #fix this
              name: bitwarden-data-pvc
        - image: bitwarden/notifications:latest
          name: bitwarden-notifications
          volumeMounts:
            - mountPath: /etc/bitwarden
              name: bitwarden-data-pvc
              subPath: ca-certificates
            - mountPath: /etc/bitwarden
              name: bitwarden-data-pvc
              subPath: logs
        - image: bitwarden/sso:latest
          name: bitwarden-sso
          volumeMounts:
            - mountPath: /etc/bitwarden
              name: bitwarden-data-pvc
              subPath: identity
            - mountPath: /etc/bitwarden
              name: bitwarden-data-pvc
              subPath: core
            - mountPath: /etc/bitwarden
              name: bitwarden-data-pvc
              subPath: ca-certificates
            - mountPath: /etc/bitwarden
              name: bitwarden-data-pvc
              subPath: logs
        - image: bitwarden/web:latest
          name: bitwarden-web
          volumeMounts:
            - mountPath: /etc/bitwarden
              name: bitwarden-data-pvc
              subPath: web
      restartPolicy: Always
      volumes:
        - name: bitwarden-data-pvc
          persistentVolumeClaim:
            claimName: bitwarden-data-pvc
        - name: bitwarden-mssql-data-pvc
          persistentVolumeClaim:
            claimName: bitwarden-mssql-data-pvc
status: {}
