services/bitwarden/bitwarden-ingress.yml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: bitwarden
spec:
  virtualhost:
    fqdn: bw.k8s.crossfits.dpitts.us
  routes:
  - services:
    - name: bitwarden-service
      port: 443
  - conditions:
    - prefix: /
#    enableWebsockets: true # Setting this to true enables websocket for all paths that match /websocket
    services:
    - name: bitwarden-service
      port: 443
